# parallel-xxhash

./: CMakeLists.txt  LICENSE  README.md
src/: examples.cc  hash_benchmark.cc  parallel-murmur3.h  parallel-xxhash.h
